# multi-agent-research-assistant

./: .example.env  .gitignore  README.md  app.py  debug_search.py  final_report.md  pyproject.toml  requirements.txt  test_apis.py
src/multi_agent_research_assistant/: crew.py  main.py
src/multi_agent_research_assistant/config/: agents.yaml  tasks.yaml
