[project]
name = "multi_agent_research_assistant"
version = "0.1.0"
description = "multi_agent_research_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.12.2",
    "google-generativeai>=0.8.6",
    "lancedb==0.30.0",
    "streamlit>=1.35.0",
]

[project.scripts]
multi_agent_research_assistant = "multi_agent_research_assistant.main:run"
run_crew = "multi_agent_research_assistant.main:run"
train = "multi_agent_research_assistant.main:train"
replay = "multi_agent_research_assistant.main:replay"
test = "multi_agent_research_assistant.main:test"
run_with_trigger = "multi_agent_research_assistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
